<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/tieNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:clickable="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>
  </android.support.design.widget.TextInputLayout>




    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <DatePicker
        android:id="@+id/dpDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:layout_below="@id/tieNombre"/>
    </android.support.design.widget.TextInputLayout>




  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    r<android.support.design.widget.TextInputEditText
        android:id="@+id/tieTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:hint="@string/telefono"
        android:clickable="true"
        android:layout_below="@id/dpDatePicker"/>
  </android.support.design.widget.TextInputLayout>




  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/tieEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:hint="@string/email"
        android:clickable="true"
        android:layout_below="@id/tieTelefono"/>
</android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/tieDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:hint="@string/descripcion"
        android:clickable="true"
        android:layout_below="@id/tieEmail"
       />
    </android.support.design.widget.TextInputLayout>


  <Button
      android:id="@+id/btnSig"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/tieDescripcion"
      android:text="@string/btn_sig"
      android:layout_gravity="bottom"/>




</LinearLayout >
</ScrollView>